--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,15 +10,13 @@
     <div>
         <h1><a href="/">Django Blog</a></h1>
     </div>
-    <div>
-        <p>published:14.06.2014, 12:14</p>
-        <h2><a href="#">My first post</a></h2>
-        <p>テスト よろしくお願いします</p>
-    </div>
-    <div>
-        <p>公開日：2014/06/14, 12:14</p>
-        <h2><a href="">2番目の投稿</a></h2>
-        <p>こんにちは！よろしくお願いします</p>
-    </div>
+    {% for post in posts %}
+        <div>
+            <p>published: {{ post.published_date }}</p>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+        {{ post }}
+    {% endfor %}
 </body>
 </html>
